--- a/index.html
+++ b/index.html
@@ -41,47 +41,47 @@
 
         <div class="passo" id="passo-5">
             <p>Na Catedral Metropolitana, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está em Maringá.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para Maringá</button>
+                pista está em Matinhos.</p>
+            <button class="btn-proximo" data-proximo="7">Viajar para Matinhos</button>
         </div>
 
         <div class="passo" id="passo-6">
             <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
-            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+            <button class="btn-proximo" data-proximo="8">Voltar e explorar o Museu Histórico</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
+            <p>Em Matinhos, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
             <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
             <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p> Na Catedral Metropolitana, você finalmente encontra o mapa antigo. Agora, para Matinhos!</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para Matinhos</button>
         </div>
 
         <div class="passo" id="passo-9">
-            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada do
+                lugar escondido.</p>
+            <button class="btn-proximo" data-proximo="11">Explorar o lugar escondido</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
+            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais do lugar escondido
                 aqui.</p>
             <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
         </div>
 
         <div class="passo" id="passo-11">
-            <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cvc.com.br%2Fdicas-de-viagem%2Finspiracoes%2Fnatureza%2Fconheca-bonito-um-paraiso-escondido-no-mato-grosso-do-sul%2F&psig=AOvVaw0H3SgK3aEuS1-DUL0CCZzr&ust=1751377929166000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLjVj62lmY4DFQAAAAAdAAAAABA0" alt="encontrando um lugar maravilhoso escondido em Matinhos">
+            <p>Dentro do lugar escondido, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
                 este lugar</p>
         </div>
 
         <div class="passo" id="passo-12">
             <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
-                que levam à cidade perdida.</p>
+                que levam ao lugar escondido .</p>
             <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
         </div>
     </main>
