--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="passo" id="passo-5">
             <p>Na Catedral Metropolitana, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está em Matinhos.</p>
+                pista está em Maringá.</p>
             <button class="btn-proximo" data-proximo="7">Viajar para Matinhos</button>
         </div>
 
@@ -51,14 +51,14 @@
         </div>
 
         <div class="passo" id="passo-7">
-            <p>Em Matinhos, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
+            <p>Em Maringá, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
             <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
             <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p> Na Catedral Metropolitana, você finalmente encontra o mapa antigo. Agora, para Matinhos!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para Matinhos</button>
+            <p> Na Catedral Metropolitana, você finalmente encontra o mapa antigo. Agora, para Maringá!</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para Maringá</button>
         </div>
 
         <div class="passo" id="passo-9">
@@ -74,7 +74,7 @@
         </div>
 
         <div class="passo" id="passo-11">
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cvc.com.br%2Fdicas-de-viagem%2Finspiracoes%2Fnatureza%2Fconheca-bonito-um-paraiso-escondido-no-mato-grosso-do-sul%2F&psig=AOvVaw0H3SgK3aEuS1-DUL0CCZzr&ust=1751377929166000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLjVj62lmY4DFQAAAAAdAAAAABA0" alt="encontrando um lugar maravilhoso escondido em Matinhos">
+            <img src="https://img.pikbest.com/back_our/20230703/bg/ff7ceb53495d8.png!w700wp"" alt="encontrando um lugar maravilhoso escondido em Maringá">
             <p>Dentro do lugar escondido, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
                 este lugar</p>
         </div>
@@ -82,7 +82,7 @@
         <div class="passo" id="passo-12">
             <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
                 que levam ao lugar escondido .</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <button class="btn-proximo" data-proximo="11">Explorar o lugar escondido</button>
         </div>
     </main>
     <script src="script.js"></script>
